# pkdx

./: CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml
src/: lib.rs  main.rs
src/app/: actions.rs  mod.rs  state.rs  ui.rs
src/io/: handler.rs
